@@ -1,3 +1,8 @@
+2004-10-05  Boris Kolpackov  <boris@kolpackov.net>
+
+	* scripts/features/patspecific_vars: Test simple/recursive
+	variable expansion.
+
 2004-09-28  Boris Kolpackov  <boris@kolpackov.net>
 
 	* scripts/features/include: Test dontcare flag inheritance
